--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="cat">
-        <img src="/images/cat4.jpeg" alt="a confused cat">
+        <img src="/images/cat1.jpeg" alt="cat with pink heart sunglasses">
     </div>
-    <h1>I'm sorry, what? You obviously made a mistake.</h1>
+    <h1>Heyyyyyyy! Will you be my Valentine?</h1>
     <div class="buttons">
-        <a href="index.html">Go Back</a>
-    <!-- </div>
-    <p><br>...or a virus will be uploaded to your laptop<br></p>
-    <div class="loader"></div> -->
+        <a href="yes.html">Yes!!!!</a>
+        <a href="no.html">Nooo</a>
+    </div>
+    
 </body>
 </html>
